# API_sample

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: api.py  config.py  model.py  tools.py
config/: logging.conf  otel_collector_config.yaml  prometheus.yaml
